Updated to Phaser 3.16.0-rc2

--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,11 @@
 
     <title><%= htmlWebpackPlugin.options.gameName %></title>
     <style>
-      * {
-        background-color: black;
-      }
-      canvas {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        margin: auto;
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        background-color: #000000;
       }
     </style>
 
